# abydosconvert

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  abydosconvert.c  abydosconvert.h  main.c  version.h
